Apply (most) debian patches
Apply debian patch 02-encryption
Apply debian patch 03-dvdrom
Apply a modified version of patch 05-help-dialog
Apply debian patch 08-fix-gnu-make-detection
Apply debian patch 10-use-non-size-specific-icon-and-add-keywords-to-desktop-file
Apply debian patch 12-fix-spelling-of-up-to
Apply debian patch 13-fix-missing-language-field-in-po-files
Apply a modified version of debian patch 14-make-builds-reproducible
Apply debian patch 17-fix-all-but-deprecated-api-warnings
Apply a modified version of debian patch 18-update-copyright-in-about-dialog
Apply debian patch 19-show-text-files-with-abs-path
Apply debian patch 22-fix-hurd-i386-ftbfs
Apply debian patch 23-add-bdrom-support
Apply debian patch 25-fix-man-pages
Apply debian patch 27-allow-opening-in-browser-again
Apply debian patch 28-pdftex-reproducibility
Apply debian patch 29-fix-more-typos
Apply debian patch 30-hurd-kfreebsd-ftbfs
Apply debian patch 31-improve-hurd-and-kfreebsd-support
Apply debian patch 33-honour-LDFLAGS
Apply debian patch 34-gcc8-format-security.patch
Apply debian patch 35-archived-homepage
Apply debian patch 36-fix-parallelism

--- a/documentation/codec-specs/rs01.tex
+++ b/documentation/codec-specs/rs01.tex
@@ -44,7 +44,7 @@ correction files must be protected with an image level
 error correction layer (by using RS01,RS02 or RS03 on the medium), 
 since only image level error correction avoids meta 
 data sectors to become a single point of failure. See the
-discussion at \url{http://dvdisaster.net/en/qa32.html} for
+discussion at \url{https://web.archive.org/web/20180428070843/http://dvdisaster.net/en/qa32.html} for
 more information on the advantages of image level data protection
 over file level approaches.
 
@@ -172,7 +172,7 @@ The $d_{i,j}$ denote the $i-th$ byte in the $j-th$ layer.
 In order to create the first ecc block, bytes $d_{1,1}$ to  $d_{1,n}$ are taken from the
 $n$ layers. Then the RS(255,k) code is calculated (see appendix \ref{rs} for its parameters)
 and the 
-resulting $k$ parity bytes $e_{1,1}$ upto $e_{k,1}$ are stored
+resulting $k$ parity bytes $e_{1,1}$ up to $e_{k,1}$ are stored
 in the ecc file. The resulting ecc block is marked grey in the
 figure. The next ecc blocks are calculated and stored accordingly.
 In total, the ecc section contains $k*ls$ bytes of parity information,
