--- a/documentation/user-manual/background.tex
+++ b/documentation/user-manual/background.tex
@@ -272,7 +272,7 @@ media with augmented images may not play correctly on all units \\
 \end{tabular}
 
 \paragraph{Further reading.} The specification for the dvdisaster codecs 
-has been specified in a separate document called \href{http://dvdisaster.net/downloads/codecs.pdf}{codecs.pdf}. 
+has been specified in a separate document called \href{https://web.archive.org/web/20180428070843/http://dvdisaster.net/downloads/codecs.pdf}{codecs.pdf}. 
 Good knowledge in coding theory and programming is required.
 
 \subsection{The linear reading strategy}
