--- a/documentation/user-manual/download.tex
+++ b/documentation/user-manual/download.tex
@@ -15,7 +15,7 @@ the \href{http://www.gnu.org/licenses/gpl-3.0.txt}{GNU General Public License v3
 
 \bigskip
 
-The dvdisaster developer site (\url{http://dvdisaster.net}) contains
+The dvdisaster developer site (\url{https://web.archive.org/web/20180428070843/http://dvdisaster.net}) contains
 the latest source code releases for the FreeBSD, GNU/Linux and NetBSD
 operating systems. These are mostly aimed at maintainers of binary packages for
 the beforementioned platforms. As an end user you might find it more convenient
@@ -133,6 +133,6 @@ We cannot accept them for various reasons.
 \smallskip
 
 dvdisaster releases are always published with cryptographic signatures
-and md5 checksums. See the \href{http://dvdisaster.net}{download site} for examples.
+and md5 checksums. See the \href{https://web.archive.org/web/20180428070843/http://dvdisaster.net}{download site} for examples.
 Be very cautious if signatures and checksums are missing, invalid or not
 matching those published at the sites mentioned above.
