--- a/documentation/user-manual/howtos.tex
+++ b/documentation/user-manual/howtos.tex
@@ -1822,7 +1822,7 @@ process of creating error correction files using these options. The
 first option marked green lets dvdisaster create the error correction
 file immediately after the medium has been (completely) read.
 The second option marked green deletes the image when the error correction
-file has been sucessfully created.
+file has been successfully created.
 
 \bigskip
 
