--- a/documentation/user-manual/manual.tex
+++ b/documentation/user-manual/manual.tex
@@ -65,6 +65,8 @@
 \fancyfoot{}
 \fancyfoot[LE,RO]{page \thepage\ of \pageref{LastPage}}
 
+\pdftrailerid{dvdisaster}
+\pdfsuppressptexinfo=-1
 \begin{document}
 
 \definecolor{lightorange}{RGB}{255,224,150}
