--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2010-06-09 11:13+0200\n"
 "Last-Translator: cg <cg@dvdisaster.org>\n"
 "Language-Team: Portuguese\n"
-"Language: \n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -635,7 +635,7 @@ msgid "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
 msgstr "  --raw-mode n            - modo para leitura de mídia CD em modo raw (20 ou 21)\n"
 
 #: dvdisaster.c:941
-msgid "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+msgid "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 msgstr "  --read-attempts n-m     - tenta de n a m leituras em um setor defeituoso\n"
 
 #: dvdisaster.c:942
@@ -1841,7 +1841,7 @@ msgid "Media ejection"
 msgstr "Ejeção da mídia"
 
 #: preferences.c:2065 preferences.c:2066
-msgid "Eject medium after sucessful read"
+msgid "Eject medium after successful read"
 msgstr "Ejetar mídia após uma leitura completa"
 
 #: preferences.c:2092
@@ -1937,7 +1937,7 @@ msgstr "Máx. de %d tentativas de leitura por setor"
 msgid ""
 "<b>Maximum number of reading attempts</b>\n"
 "\n"
-"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts upto this number.\n"
+"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts up to this number.\n"
 "\n"
 "The decision to do more attempts depends on the quality of data gathered so far, which in turn is influenced by the capabilities of your optical drive and the operating system. So depending on your configuration, you may or may not see dvdisaster using the maximum value."
 msgstr ""
@@ -2004,7 +2004,7 @@ msgstr " vezes"
 msgid ""
 "<b>Media read attempts</b> for the linear reading strategy\n"
 "\n"
-"If unreadable sectors remain after reading the medium from start to end, the medium is read again upto he given number of times.\n"
+"If unreadable sectors remain after reading the medium from start to end, the medium is read again up to he given number of times.\n"
 "\n"
 "Only the missing sectors will be tried in the additional reading passes."
 msgstr ""
@@ -6355,11 +6355,11 @@ msgstr "<i>Novidades dessa versão:</i>"
 
 #~ msgid ""
 #~ "\n"
-#~ "dvdisaster version %s build %d\n"
+#~ "dvdisaster version %s build %s\n"
 #~ "\n"
 #~ msgstr ""
 #~ "\n"
-#~ "dvdisaster, versão %s build %d\n"
+#~ "dvdisaster, versão %s build %s\n"
 
 #~ msgid "--cache-size maximum is 8192MB."
 #~ msgstr "--cache-size máximo é 8192MB."
@@ -6605,7 +6605,7 @@ msgstr "<i>Novidades dessa versão:</i>"
 #~ "  --internal-rereads n   - drive may attempt n rereads before reporting an error\n"
 #~ "  --query-size n         - query drive/udf/ecc for image size (default: ecc)\n"
 #~ "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
-#~ "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+#~ "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 #~ "  --read-medium n        - read the whole medium up to n times\n"
 #~ "  --read-raw             - performs read in raw mode if possible\n"
 #~ "  --speed-warning n      - print warning if speed changes by more than n percent\n"
@@ -6624,7 +6624,7 @@ msgstr "<i>Novidades dessa versão:</i>"
 #~ msgid ""
 #~ "<b>File splitting</b>\n"
 #~ "\n"
-#~ "Allows working with file systems which are limited to 2GB per file, e.g. FAT from Windows. Created files are spread over upto 100 segments called \"medium00.iso\", \"medium01.iso\" etc. at the cost of a small performance hit."
+#~ "Allows working with file systems which are limited to 2GB per file, e.g. FAT from Windows. Created files are spread over up to 100 segments called \"medium00.iso\", \"medium01.iso\" etc. at the cost of a small performance hit."
 #~ msgstr ""
 #~ "<b>Separação de arquivos</b>\n"
 #~ "\n"
