--- a/locale/cs.po
+++ b/locale/cs.po
@@ -652,7 +652,7 @@ msgid "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
 msgstr "  --raw-mode n           - režim přímého čtení pro CD disky (20 nebo 21)\n"
 
 #: dvdisaster.c:941
-msgid "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+msgid "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 msgstr "  --read-attempts n-m    - zkusit n až m opakovaných čtení poškozeného sektoru\n"
 
 #: dvdisaster.c:942
@@ -1901,7 +1901,7 @@ msgid "Media ejection"
 msgstr "Vysunutí disku"
 
 #: preferences.c:2065 preferences.c:2066
-msgid "Eject medium after sucessful read"
+msgid "Eject medium after successful read"
 msgstr "Po úspěšném načtení vysunout disk"
 
 #: preferences.c:2092
@@ -1998,7 +1998,7 @@ msgstr "Přečtení sektoru nezkoušet více než %d krát"
 msgid ""
 "<b>Maximum number of reading attempts</b>\n"
 "\n"
-"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts upto this number.\n"
+"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts up to this number.\n"
 "\n"
 "The decision to do more attempts depends on the quality of data gathered so far, which in turn is influenced by the capabilities of your optical drive and the operating system. So depending on your configuration, you may or may not see dvdisaster using the maximum value."
 msgstr ""
@@ -2065,7 +2065,7 @@ msgstr " krát"
 msgid ""
 "<b>Media read attempts</b> for the linear reading strategy\n"
 "\n"
-"If unreadable sectors remain after reading the medium from start to end, the medium is read again upto he given number of times.\n"
+"If unreadable sectors remain after reading the medium from start to end, the medium is read again up to he given number of times.\n"
 "\n"
 "Only the missing sectors will be tried in the additional reading passes."
 msgstr ""
@@ -6646,11 +6646,11 @@ msgstr "<i>Novinky v této verzi:</i>"
 
 #~ msgid ""
 #~ "\n"
-#~ "dvdisaster version %s build %d\n"
+#~ "dvdisaster version %s build %s\n"
 #~ "\n"
 #~ msgstr ""
 #~ "\n"
-#~ "dvdisaster verze %s sestavení %d\n"
+#~ "dvdisaster verze %s sestavení %s\n"
 #~ "\n"
 
 #~ msgid "--prefetch-sectors must be in range 32...8096"
