--- a/locale/ru.po
+++ b/locale/ru.po
@@ -13,7 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-23 08:11+0300\n"
 "Last-Translator: Igor Gorbounov <igor.gorbounov@gmail.com>\n"
 "Language-Team: Russian\n"
-"Language: \n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -634,7 +634,7 @@ msgid "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
 msgstr "  --raw-mode n           - режим для низкоуровневого чтения CD-носителей (20 или 21)\n"
 
 #: dvdisaster.c:941
-msgid "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+msgid "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 msgstr "  --read-attempts n-m    - делается от n до m попыток чтения поврежденного сектора\n"
 
 #: dvdisaster.c:942
@@ -1843,7 +1843,7 @@ msgid "Media ejection"
 msgstr "Извлечь носитель"
 
 #: preferences.c:2065 preferences.c:2066
-msgid "Eject medium after sucessful read"
+msgid "Eject medium after successful read"
 msgstr "Извлечь носитель после успешного чтения"
 
 #: preferences.c:2092
@@ -1940,7 +1940,7 @@ msgstr "Макс. %d попыток чтения на сектор"
 msgid ""
 "<b>Maximum number of reading attempts</b>\n"
 "\n"
-"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts upto this number.\n"
+"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts up to this number.\n"
 "\n"
 "The decision to do more attempts depends on the quality of data gathered so far, which in turn is influenced by the capabilities of your optical drive and the operating system. So depending on your configuration, you may or may not see dvdisaster using the maximum value."
 msgstr ""
@@ -2007,7 +2007,7 @@ msgstr " раз"
 msgid ""
 "<b>Media read attempts</b> for the linear reading strategy\n"
 "\n"
-"If unreadable sectors remain after reading the medium from start to end, the medium is read again upto he given number of times.\n"
+"If unreadable sectors remain after reading the medium from start to end, the medium is read again up to he given number of times.\n"
 "\n"
 "Only the missing sectors will be tried in the additional reading passes."
 msgstr ""
@@ -6373,11 +6373,11 @@ msgstr "<i>Новое в этой версии:</i>"
 
 #~ msgid ""
 #~ "\n"
-#~ "dvdisaster version %s build %d\n"
+#~ "dvdisaster version %s build %s\n"
 #~ "\n"
 #~ msgstr ""
 #~ "\n"
-#~ "dvdisaster версия %s сборка %d\n"
+#~ "dvdisaster версия %s сборка %s\n"
 #~ "\n"
 
 #~ msgid "--cache-size maximum is 8192MB."
@@ -6669,7 +6669,7 @@ msgstr "<i>Новое в этой версии:</i>"
 #~ "  --internal-rereads n   - drive may attempt n rereads before reporting an error\n"
 #~ "  --query-size n         - query drive/udf/ecc for image size (default: ecc)\n"
 #~ "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
-#~ "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+#~ "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 #~ "  --read-medium n        - read the whole medium up to n times\n"
 #~ "  --read-raw             - performs read in raw mode if possible\n"
 #~ "  --speed-warning n      - print warning if speed changes by more than n percent\n"
@@ -6686,7 +6686,7 @@ msgstr "<i>Новое в этой версии:</i>"
 #~ msgid ""
 #~ "<b>File splitting</b>\n"
 #~ "\n"
-#~ "Allows working with file systems which are limited to 2GB per file, e.g. FAT from Windows. Created files are spread over upto 100 segments called \"medium00.iso\", \"medium01.iso\" etc. at the cost of a small performance hit."
+#~ "Allows working with file systems which are limited to 2GB per file, e.g. FAT from Windows. Created files are spread over up to 100 segments called \"medium00.iso\", \"medium01.iso\" etc. at the cost of a small performance hit."
 #~ msgstr ""
 #~ "<b>Разбиение файлов</b>\n"
 #~ "\n"
@@ -6732,7 +6732,7 @@ msgstr "<i>Новое в этой версии:</i>"
 #~ "  --internal-rereads n   - drive may attempt n rereads before reporting an error\n"
 #~ "  --query-size n         - query drive/udf/ecc for image size (default: ecc)\n"
 #~ "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
-#~ "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+#~ "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 #~ "  --read-medium n        - read the whole medium up to n times\n"
 #~ "  --read-raw             - performs read in raw mode if possible\n"
 #~ "  --speed-warning n      - print warning if speed changes by more than n percent\n"
