--- a/locale/sv.po
+++ b/locale/sv.po
@@ -619,7 +619,7 @@ msgid "  --raw-mode n           - mode for raw reading CD media (20 or 21)\n"
 msgstr ""
 
 #: dvdisaster.c:941
-msgid "  --read-attempts n-m    - attempts n upto m reads of a defective sector\n"
+msgid "  --read-attempts n-m    - attempts n up to m reads of a defective sector\n"
 msgstr ""
 
 #: dvdisaster.c:942
@@ -1758,7 +1758,7 @@ msgid "Media ejection"
 msgstr ""
 
 #: preferences.c:2065 preferences.c:2066
-msgid "Eject medium after sucessful read"
+msgid "Eject medium after successful read"
 msgstr ""
 
 #: preferences.c:2092
@@ -1833,7 +1833,7 @@ msgstr ""
 msgid ""
 "<b>Maximum number of reading attempts</b>\n"
 "\n"
-"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts upto this number.\n"
+"When the minimum number of reading attempts is reached without success, dvdisaster might choose to perform additional reading attempts up to this number.\n"
 "\n"
 "The decision to do more attempts depends on the quality of data gathered so far, which in turn is influenced by the capabilities of your optical drive and the operating system. So depending on your configuration, you may or may not see dvdisaster using the maximum value."
 msgstr ""
@@ -1892,7 +1892,7 @@ msgstr ""
 msgid ""
 "<b>Media read attempts</b> for the linear reading strategy\n"
 "\n"
-"If unreadable sectors remain after reading the medium from start to end, the medium is read again upto he given number of times.\n"
+"If unreadable sectors remain after reading the medium from start to end, the medium is read again up to he given number of times.\n"
 "\n"
 "Only the missing sectors will be tried in the additional reading passes."
 msgstr ""
