--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,26 @@
 # dvdisaster changelog -*-text-*-
 
+0.79.6.patchlevel-4 04-09-2020 *UNOFFICIAL*
+- feat: allow adaptive reading again*
+- feat: add --permissive-medium-type option
+- fix: lift the limitation on the number of cmdline args
+- fix: lift segfault when aborting adaptive read
+- chore: move *.c *.h to src/, and build in build/
+- chore: build: finally really fix make parallelism
+- chore: use gcc -pipe to speed up the build
+- chore: rename CLI version to NOGUI in the version tag
+- chore: add missing target dependency in Makefile
+- chore: update readme
+- chore: locales update
+
+*:The original author disabled adaptive reading
+  specifically in 0.79.6 (see changelog below), as it
+  doesn't handle RS03 correctly yet. In this patchlevel
+  we enable it again for media without (detected) ECC data,
+  and for media protected with RS01 or RS02. If we detect RS03,
+  we tell the user the behaviour is unpredictable/undefined,
+  and recommend using linear reading instead.
+
 0.79.6.patchlevel-3 01-09-2020 *UNOFFICIAL*
 - fix: windows: flavor in build version was always 'UNKNOWN'
 - fix: windows: the config & log files were not written properly
