--- a/locale/de.po
+++ b/locale/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.52.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-04 23:43+0200\n"
+"POT-Creation-Date: 2020-09-05 15:51+0200\n"
 "PO-Revision-Date: 2004-11-30 19:48+0100\n"
 "Last-Translator: Carsten Gnörlich <carsten@dvdisaster.de>\n"
 "Language-Team: German <de@li.org>\n"
@@ -6356,9 +6356,9 @@ msgid ""
 "<b>Unofficial version.</b>\n"
 "\n"
 "This is a modified version of the last <b>0.79.6</b> upstream pre-release.\n"
-"<b>Patchlevel 3</b> adds support for a full CLI version, BD-R TL/QL,\n"
-"a Windows build and an option to produce bigger BD-R RS03 images.\n"
-"See the About box and changelog for more information.\n"
+"We add support for a full CLI version, BD-R TL/QL, a Windows build, add an option to\n"
+"produce bigger BD-R RS03 images, re-enabled adaptive reading (except for RS03), and more.\n"
+"Please refer to the changelog for more information.\n"
 "The warning message from the pre-release version is retained below.\n"
 msgstr ""
 
