--- a/locale/ru.po
+++ b/locale/ru.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.70.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-09-04 23:43+0200\n"
+"POT-Creation-Date: 2020-09-05 15:51+0200\n"
 "PO-Revision-Date: 2009-07-23 08:11+0300\n"
 "Last-Translator: Igor Gorbounov <igor.gorbounov@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -6097,9 +6097,9 @@ msgid ""
 "<b>Unofficial version.</b>\n"
 "\n"
 "This is a modified version of the last <b>0.79.6</b> upstream pre-release.\n"
-"<b>Patchlevel 3</b> adds support for a full CLI version, BD-R TL/QL,\n"
-"a Windows build and an option to produce bigger BD-R RS03 images.\n"
-"See the About box and changelog for more information.\n"
+"We add support for a full CLI version, BD-R TL/QL, a Windows build, add an option to\n"
+"produce bigger BD-R RS03 images, re-enabled adaptive reading (except for RS03), and more.\n"
+"Please refer to the changelog for more information.\n"
 "The warning message from the pre-release version is retained below.\n"
 msgstr ""
 
