--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 # dvdisaster changelog -*-text-*-
 
+0.79.6.patchlevel-5 12-01-2021 *UNOFFICIAL*
+fix: don't error on blank media in medium-info (#19), bug present upstream since 0.79.5
+fix: gui: fix the 'SetLabelText() failed' error caption on the medium-info window (#19), bug present upstream since 0.72.3
+fix: add CHANGELOG, TODO, CREDITS to dist for the Help menu
+chore: appimage: add missing gtk engines
+chore: enhance packaging, update locales, changelog et al.
+
 0.79.6.patchlevel-4 04-09-2020 *UNOFFICIAL*
 - feat: allow adaptive reading again*
 - feat: add --permissive-medium-type option
