chore: better use of configure features

--- a/INSTALL
+++ b/INSTALL
@@ -130,7 +130,7 @@ user@host> ./configure
 If you want to build a CLI-only version, which doesn't depend
 on the gtk2 libraries, you can run instead:
 
-user@host> CLI_ONLY=1 ./configure
+user@host> ./configure --with-cli-only
 
 The script will possibly print some errors about missing libraries.
 Type "configure --help" to learn about pointing configure 
