--- a/locale/cs.po
+++ b/locale/cs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster 0.79\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-30 13:18+0100\n"
+"POT-Creation-Date: 2021-01-30 13:40+0100\n"
 "PO-Revision-Date: 2011-07-24 21:12+0100\n"
 "Last-Translator: Jindřich Šesták <khagaroth@users.sourceforge.net>\n"
 "Language-Team: none (individual translator)\n"
@@ -6286,9 +6286,9 @@ msgstr "Vzorový disk"
 
 #: src/welcome-window.c:82
 msgid ""
-"The <b>0.79.6 patchlevel</b> series are modified/enhanced from the last upstream pre-release.\n"
-"We add support for a full CLI version, BD-R TL/QL, a Windows build, an option to\n"
-"produce bigger BD-R RS03 images, re-enabled adaptive reading (except for RS03), and more.\n"
+"This is <b>v0.79.6-pl7</b>. The patchlevel series are enhanced from the last upstream pre-release.\n"
+"We add support for a CLI version, BD-R TL/QL, a Windows build, an option to produce bigger BD-R RS03,\n"
+"images, support for stripping ECC from ISOs, re-enabled adaptive reading (except for RS03), and more.\n"
 "\n"
 "Please refer to the <i>Help &gt; Change log</i> menu for all the details.\n"
 "The warning message from the pre-release version is retained below.\n"
