--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dvdisaster\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-30 13:18+0100\n"
+"POT-Creation-Date: 2021-01-30 13:40+0100\n"
 "PO-Revision-Date: 2006-06-14 23:48+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -5862,9 +5862,9 @@ msgstr ""
 
 #: src/welcome-window.c:82
 msgid ""
-"The <b>0.79.6 patchlevel</b> series are modified/enhanced from the last upstream pre-release.\n"
-"We add support for a full CLI version, BD-R TL/QL, a Windows build, an option to\n"
-"produce bigger BD-R RS03 images, re-enabled adaptive reading (except for RS03), and more.\n"
+"This is <b>v0.79.6-pl7</b>. The patchlevel series are enhanced from the last upstream pre-release.\n"
+"We add support for a CLI version, BD-R TL/QL, a Windows build, an option to produce bigger BD-R RS03,\n"
+"images, support for stripping ECC from ISOs, re-enabled adaptive reading (except for RS03), and more.\n"
 "\n"
 "Please refer to the <i>Help &gt; Change log</i> menu for all the details.\n"
 "The warning message from the pre-release version is retained below.\n"
