--- a/README
+++ b/README
@@ -1,3 +1,23 @@
+#  dvdisaster: Additional error correction for optical media.
+#  Copyright (C) 2004-2018 Carsten Gnoerlich.
+#
+#  Email: support@dvdisaster.org
+#
+#  This file is part of dvdisaster.
+#
+#  dvdisaster is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+#
+#  dvdisaster is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with dvdisaster. If not, see <http://www.gnu.org/licenses/>.
+
 This directory tree contains dvdisaster,
 a tool providing additional ECC protection for optical media.
 
@@ -10,12 +30,6 @@ Roadmap of contained files
 
 INSTALL
 	See the file INSTALL on bringing up dvdisaster.
-
-README.CVS
-	If you got this archive from CVS, make sure to read README.CVS also.
-
-README.MODIFYING
-	Please read these notes carefully if you plan to modify dvdisaster.
 
 COPYING
 	This software is distributed under the GNU General Public License,
