--- a/locale/de.po
+++ b/locale/de.po
@@ -3007,13 +3007,13 @@ msgid ""
 "* Warning: This ecc file requires dvdisaster-%d.%d!\n"
 "*          Proceeding could trigger incorrect behaviour.\n"
 "*          Please read the image without using this ecc file\n"
-"*          or visit http://www.dvdisaster.org for an upgrade.\n"
+"*          or upgrade dvdisaster.\n"
 "\n"
 msgstr ""
 "* Warnung: Diese Fehlerkorrektur-Datei benötigt dvdisaster-%d.%d!\n"
 "*          Die Verwendung dieser Datei kann fehlerhafte Ergebnisse verursachen.\n"
 "*          Bitte lesen Sie das Abbild ohne diese Fehlerkorrektur-Datei ein\n"
-"*          oder besorgen Sie sich unter http://www.dvdisaster.org eine neuere Version.\n"
+"*          oder besorgen Sie sich eine neuere Version von dvdisaster.\n"
 "\n"
 
 #: src/read-adaptive.c:152 src/rs01-common.c:80 src/rs01-common.c:238
@@ -3055,10 +3055,6 @@ msgid ""
 "*          Please visit http://www.dvdisaster.org for an upgrade.\n"
 "\n"
 msgstr ""
-"* Warnung: Diese Abbild-Datei benötigt dvdisaster-%d.%d!\n"
-"*          Die Verwendung dieses Abbilds kann fehlerhafte Ergebnisse verursachen.\n"
-"*          Bitte besorgen Sie sich unter http://www.dvdisaster.org eine neuere Version.\n"
-"\n"
 
 #: src/read-adaptive.c:703
 msgid ""
@@ -3452,14 +3448,14 @@ msgid ""
 "\n"
 "Proceeding could trigger incorrect behaviour.\n"
 "Please read the image without using this ecc file\n"
-"or visit http://www.dvdisaster.org for an upgrade.\n"
+"or upgrade dvdisaster.\n"
 "\n"
 msgstr ""
 "Diese Fehlerkorrektur-Datei benötigt dvdisaster-%d.%d!\n"
 "\n"
 "Die Verwendung dieser Datei kann fehlerhafte Ergebnisse verursachen.\n"
 "Bitte lesen Sie das Abbild ohne diese Fehlerkorrektur-Datei ein\n"
-"oder besorgen Sie sich unter http://www.dvdisaster.org eine neuere Version.\n"
+"oder besorgen Sie sich eine neuere Version von dvdisaster.\n"
 "\n"
 
 #: src/read-linear.c:887
@@ -4285,12 +4281,11 @@ msgstr "- Benötigt          : dvdisaster-%d.%d (gut)\n"
 msgid ""
 "* requires         : dvdisaster-%d.%d (BAD)\n"
 "* Warning          : The following output might be incorrect.\n"
-"*                  : Please visit http://www.dvdisaster.org for an upgrade.\n"
+"*                  : Please upgrade dvdisaster.\n"
 msgstr ""
 "* Benötigt          : dvdisaster-%d.%d (SCHLECHT)\n"
 "* Warnung           : Die folgenden Ausgaben können falsch sein.\n"
-"*                   : Bitte besuchen Sie http://www.dvdisaster.de\n"
-"*                   : um eine neuere Version herunterzuladen.\n"
+"*                   : Bitte verwenden Sie eine neuere Version von dvdisaster.\n"
 
 #: src/rs01-verify.c:701 src/rs02-verify.c:1030 src/rs03-verify.c:883
 #, c-format
@@ -5797,12 +5792,8 @@ msgstr "- Benötigt          : dvdisaster-%s\n"
 msgid ""
 "* requires         : dvdisaster-%s (BAD)\n"
 "* Warning          : The following output might be incorrect.\n"
-"*                  : Please visit http://www.dvdisaster.org for an upgrade.\n"
+"*                  : Please upgrade dvdisaster.\n"
 msgstr ""
-"* Benötigt          : dvdisaster-%s (SCHLECHT)\n"
-"* Warnung           : Die folgenden Ausgaben können falsch sein.\n"
-"*                   : Bitte besuchen Sie http://www.dvdisaster.de\n"
-"*                   : um eine neuere Version herunterzuladen.\n"
 
 #: src/rs03-verify.c:896
 msgid "none available"
