--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,7 +21,7 @@
 #  along with dvdisaster. If not, see <http://www.gnu.org/licenses/>.
 
 0.79.9 12-05-2021
-- Revised code for clean compile under gcc-10 and Slackware 15
+- Revised code for clean compile under gcc-10 and Debian 11 (sid) or Slackware 15
 - added -Wno-deprecated-declarations to shield against a flood of warnings
   resulting from gtk-2 / glib mismatches
 
