--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,6 @@
 #  dvdisaster: Additional error correction for optical media.
 #  Copyright (C) 2004-2018 Carsten Gnoerlich.
+#  Copyright (C) 2019-2021 The dvdisaster development team.
 #
 #  Email: support@dvdisaster.org
 #
